@@ -1,6 +1,7 @@
 0.12.14
 - add tests for conversion from txt source
 - boilerplate marking was duplicating an id. The code was incoherent. Cleaned this up.
+- don't turn top-level html comments into non-comments. in BS4, Comment is a subclass of NavigableString! Thanks @G4OEU!
 
 0.12.13 September 23, 2022
 - fix reversion in txt production because GutenbergTextParser needs caching
